# UGE-haskell-tests

./: .gitignore  README.md
tp1/: hie.yaml  tp1.cabal
tp1/src/: Tp1.hs
tp1/tests/: Tp1Tests.hs  test.hs
tp2/: hie.yaml  tp2.cabal
tp2/bench/: Bench.hs
tp2/src/: Tp2.hs
tp2/tests/: Tp2Tests.hs  test.hs
tp3/: hie.yaml  tp3.cabal
tp3/bench/: Bench.hs
tp3/src/: Tp3.hs
tp3/tests/: Tp3Tests.hs  test.hs
tp4/: tp4.cabal
tp4-2023/tests/: test.hs
tp4-2024/: tp4.cabal
tp4-2024/src/: Tp4.hs
tp4-2024/tests/: Tp4Tests.hs
tp4-2025/: tp4.cabal
tp4-2025/src/: Tp4.hs
tp4-2026/: hie.yaml
tp4-2026/src/: Tp4.hs
tp4-2026/tests/: Tp4Tests.hs
tp4/src/: Tp4.hs
tp4/tests/: Tp4Tests.hs
tp5/: hie.yaml  tp5.cabal
tp5/src/: Tp5.hs
tp5/tests/: Tp5Tests.hs  test.hs
tp6/: hie.yaml  tp6.cabal
tp6/src/: Tp6.hs
tp6/tests/: Tp6Tests.hs  test.hs
tp7/: hie.yaml  tp7.cabal
tp7/src/: Tp7.hs
tp7/tests/: Tp7Tests.hs  test.hs
tp8/: hie.yaml
tp8-ra-lists/: hie.yaml  ra-lists.cabal
tp8-ra-lists/src/: RALists.hs
tp8-ra-lists/tests/: RAListsTests.hs  test.hs
tp8-rush-hour/: tp8.cabal
tp8-rush-hour/src/: Tp8.hs
tp8-rush-hour/tests/: test.hs
tp8/src/: Tp8.hs
tp8/tests/: Tp8Tests.hs
tp9-file-server/: hie.yaml  tp9.cabal
tp9-file-server/src/: FileServer.hs
tp9-file-server/tests/: FileServerTests.hs  test.hs
tp9-file-system/: tp9.cabal
tp9-library/: hie.yaml  tp9.cabal
tp9-library/src/: Tp9.hs
tp9-library/tests/: Tp9Tests.hs  test.hs
tp9/src/: Tp9.hs
tp9/tests/: Tp9Tests.hs
tpfinal-2023/: tpfinal.cabal
tpfinal-2023/src/: Tpfinal.hs
tpfinal-2024/src/: Tpfinal.hs
tpfinal-2024/tests/: TpfinalTests.hs
tpfinal-2025/: hie.yaml  tpfinal.cabal
tpfinal-2025/src/: Tpfinal.hs
tpfinal-2025/tests/: TpfinalTests.hs  test.hs
tpx-regex/: hie.yaml  remarques.md  tpx.cabal
tpx-regex/src/: Automaton.hs  Regex.hs  Result.hs  Thompson.hs  Word.hs
tpx-regex/tests/: AutomatonTests.hs  RegexTests.hs  ThompsonTests.hs
