cabal-version:      2.4
name:               tp1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Antoine Meyer
maintainer:         antoine.meyer@univ-eiffel.fr

-- A copyright notice.
-- copyright:
-- category:

library
    exposed-modules:  Tp1
    build-depends:    base >= 4 && < 5
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  other-modules:
    Tp1Tests
  build-depends:
      base >= 4 && < 5
    , smallcheck
    , tasty >= 0.7
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , tp1
