cabal-version:      2.4
name:               tp3
version:            0.1.0.0

author:             Antoine Meyer
maintainer:         antoine.meyer@univ-eiffel.fr

library
    exposed-modules:  Tp3
    build-depends:    
        base >= 4 && < 5
      , containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  other-modules:
    Tp3Tests
  build-depends:
      base >= 4 && < 5
    , smallcheck
    , tasty >= 0.7
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , tp3
