cabal-version:      3.4
name:               regex
version:            0.1.0.0

author:             Antoine Meyer
maintainer:         antoine.meyer@univ-eiffel.fr

library
    exposed-modules:  Regex, Automaton, Thompson
    other-modules:  Result, Word
    build-depends:    
        base
      , containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs: tests
  other-modules:  RegexTests, AutomatonTests
  build-depends: 
      base
    , containers
    , tasty
    , tasty-hunit
    , tasty-discover
    , regex
  build-tool-depends:
    tasty-discover:tasty-discover

-- test-suite test
--   default-language:
--     Haskell2010
--   type:
--     exitcode-stdio-1.0
--   hs-source-dirs:
--     tests
--   main-is:
--     test.hs
--   other-modules:
--     RegexTests
--   build-depends:
--       base >= 4 && < 5
--     , smallcheck
--     , QuickCheck
--     , tasty
--     , tasty-hunit
--     , tasty-quickcheck
--     , tasty-smallcheck
--     , regex
