cabal-version:      3.4
name:               regex
version:            0.1.0.0

author:             Antoine Meyer
maintainer:         antoine.meyer@univ-eiffel.fr

library
    exposed-modules:  Regex, Automaton, Thompson
    other-modules:  Result, Word
    build-depends:    
        base
      , containers
    hs-source-dirs:   src
    default-language: GHC2021

test-suite test
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs: tests
  other-modules:  RegexTests, AutomatonTests, ThompsonTests
  build-depends: 
      base
    , containers
    , tasty
    , tasty-hunit
    , tasty-discover
    , regex
  build-tool-depends:
    tasty-discover:tasty-discover
  default-language: GHC2021
